# OpenGL_Practice1

./: .gitignore  CMakeLists.txt  Makefile  README.md
CMake/: Helpers.cmake
libs/glew/: CMakeLists.txt
libs/libpng/: CMakeLists.txt
libs/zlib/: CMakeLists.txt
src/: Figures.h  Helpers.cpp  Helpers.h  ObjLoader.cpp  ObjLoader.h  PngLoader.cpp  PngLoader.h  PostProcessManager.cpp  PostProcessManager.h  RenderManager.cpp  RenderManager.h  Shaders.cpp  Shaders.h  UIElement.cpp  UIElement.h  UIManager.cpp  UIManager.h  Vertex.cpp  Vertex.h  main.cpp
